[package]
name = "example-plugin"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Example transient storage plugin."
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.17"
sp-blockchain = { version = "4.0.0-dev", path = "../../../primitives/blockchain" }
sc-client-db = { version = "0.10.0-dev", path = ".." }
sp-runtime = { version = "24.0.0", path = "../../../primitives/runtime" }
sp-state-machine = { version = "0.28.0", path = "../../../primitives/state-machine" }
